kubernetes/overlays/prod/overlays/askem-beta/ingress/private-web-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-web-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: askem-beta-web-private, askem-beta-k8s
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: "app.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hmi-client
                port:
                  number: 8080

    - host: "server.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hmi-server
                port:
                  number: 3000

    - host: "graphdb.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: data-service-graphdb
                port:
                  number: 7687

    - host: "documentation.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: terarium-docs
                port:
                  number: 8000

    - host: "mit-proxy.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mit-proxy
                port:
                  number: 3981

    - host: "mit-tr.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mit-tr
                port:
                  number: 4046

    - host: "beaker.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beaker
                port:
                  number: 3050

    - host: "model-service.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: model-service
                port:
                  number: 3010

    - host: "pyciemss.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pyciemss-api
                port:
                  number: 3040

    - host: "sciml-service.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sciml-service
                port:
                  number: 3030

    - host: "skema-rs.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skema-rs
                port:
                  number: 4040

    - host: "skema-tr.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skema-text-reading
                port:
                  number: 4047

    - host: "skema-unified.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: skema-unified
                port:
                  number: 4045

    - host: "knowledge-middleware.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: knowledge-middleware-api
                port:
                  number: 3060

    - host: "funman.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: funman
                port:
                  number: 8190

    - host: "gollm.beta.terarium.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gollm
                port:
                  number: 8000

  tls:
    - hosts:
        - "app.beta.terarium.ai"
        - "server.beta.terarium.ai"
        - "graphdb.beta.terarium.ai"
        - "documentation.beta.terarium.ai"
        - "funman.beta.terarium.ai"
        - "gollm.beta.terarium.ai"
        - "beaker.beta.terarium.ai"
        - "mit-proxy.beta.terarium.ai"
        - "mit-tr.beta.terarium.ai"
        - "model-service.beta.terarium.ai"
        - "pyciemss.beta.terarium.ai"
        - "sciml-service.beta.terarium.ai"
        - "skema-rs.beta.terarium.ai"
        - "skema-text-reading.beta.terarium.ai"
        - "skema-unified.beta.terarium.ai"
        - "knowledge-middleware.beta.terarium.ai"
